Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32325

Docker Build Device having Issues Scanning Project

XMLWordPrintable

    • Linux/X11
    • 3d7cbe122 (15.0), 97a37eb6f (15.0), 936aa3762 (15.0), 1d415800f (16.0), 9b4b8cf43 (16.0), ff476ee8f (16.0), c772b4dcc (16.0)

      Ubuntu 24.04
      Yocto
      qmake

      When opening the project, we get the following error: ':-1: error: Project ERROR: libhal development package not found'. libhal is one of the libraries installed in the docker container that we wish to use while compiling the project.

      Creator logs show a warning coming from qtc.docker.device stating that a process failed to start, specifically a call that appears to be using pkg-config to check if libhal exists on the Docker container. Both libhal.so and libhal.pc exist on the container and pkg-config is also installed on the container.  Launching the container directly and run the following command 'pkg-config --exists --print-errors libhal', pkg-config has no trouble finding the package.
      Relevant part of the log:

      /bin/sh -c 'type /bin/sh >/dev/null && echo __qtc$$qtc__ && exec /bin/sh -c '\\''pkg-config 2> /dev/null 2> /dev/null --exists libhal'\\'''. 

      By running the command after removing the calls to redirect standard error and adding the "--print-errors" flag for pkg-config gives the following error: 'Must specify package names on the command line'.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            tommimtauriainen Tommi M. Tauriainen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: