src/libs/utils/commandline.cpp
@@ -628,6 +628,12 @@ void ProcessArgs::addArgs(QString *args, const QStringList &inArgs)
         addArg(args, arg);
 }
 
+void ProcessArgs::addArgs(QString *args, const QStringList &inArgs, OsType osType)
+{
+    for (const QString &arg : inArgs)
+        addArg(args, arg, osType);
+}
+
 CommandLine &CommandLine::operator<<(const QString &arg)
 {
     addArg(arg);
@@ -1541,6 +1547,15 @@ void CommandLine::addCommandLineAsSingleArg(const CommandLine &cmd)
     ProcessArgs::addArgs(&combined, cmd.arguments());
 
     addArg(combined);
+}
+
+void CommandLine::addCommandLineAsSingleArg(const CommandLine &cmd, OsType osType)
+{
+    QString combined;
+    ProcessArgs::addArg(&combined, cmd.executable().path(), osType);
+    ProcessArgs::addArgs(&combined, cmd.arguments());
+
+    addArg(combined, osType);
 }
 
 void CommandLine::addCommandLineWithAnd(const CommandLine &cmd)
